# reward-gradient-analyzer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/: slay-the-spire.json
docs/: gold-label-schema.md  hermes-dialogue.md  spike-architecture.md
docs/research/: 00-framework.md  01-five-directions.md  codex-1-perception-feasibility.md  codex-2-scoring-methodology.md  codex-3-market-wedge-gtm.md  codex-4-vertical-data-legal.md  codex-5-product-telemetry-moat.md
src/rga/: __init__.py  audio.py  cli.py  contracts.py  eval.py  fuse.py  ingest.py  ocr.py  screens.py
tickets/: RGA-001-spike.md
tools/: codex-prompt-header-rga.md  rga-notify.sh  rga-watch-codex.sh
