[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rga"
version = "0.1.0"
description = "Reward Gradient Analyzer specialist perception spike"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.9",
  "paddleocr>=3.0.0",
  "scipy>=1.11",
  "soundfile>=0.12",
  "librosa>=0.10",
  "matplotlib>=3.8"
]

[tool.setuptools.packages.find]
where = ["src"]
